<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="welcome">Benvenuto</string>
    <string name="insertYourData">Per favore inserisci i tuoi dati.</string>
    <string name="email">Indirizzo Email</string>
    <string name="loginNoAccountAlert">Non sei Registrato?</string>
    <string name="signUp">Registrati</string>
    <string name="app_name">PronuntiApp</string>
    <string name="TitoloAccesso">Accedi</string>
    <string name="labelGenitore">Genitore</string>
    <string name="labelBambino">Bambino/a</string>
    <string name="labelLogopedista">Terapista</string>
    <string name="titoloLogin">Inserisci le tue credenziali</string>
    <string name="username">Nome utente</string>
    <string name="password">Password</string>
    <string name="labelAccediButton">Accedi</string>
    <string name="PersonaggiButton">PERSONAGGI</string>
    <string name="ClassificaButton">CLASSIFICA</string>
    <string name="ErrMsg">Credenziali vuote o non valide.</string>
    <string name="titleRanking">Classifica</string>
    <string name="titleCharacters">Personaggi</string>
    <string name="titleHome">Home</string>
    <string name="charactersNotFound">Ops! Non hai ancora nessun personaggio, continua a giocare!</string>
    <string name="position">Posizione</string>
    <string name="name">Utente</string>
    <string name="loginDoctor">Terapista</string>
    <string name="loginPatient">Paziente</string>
    <string name="patientAccess">Benvenuto Paziente!</string>
    <string name="doctorAccess">Benvenuto Terapista!</string>
    <string name="homepageTitleTherapist">Benvenuto Logopedista</string>
    <string name="delete">Cancella</string>
    <string name="excerciseType">Tipologia Esercizi:</string>
    <string name="excerciseOne">Denominazione immagini</string>
    <string name="excerciseTwo">Ripetizione di sequenze di parole</string>
    <string name="excerciseThree">Riconoscimento di coppie minime</string>
    <string name="createExcercise1">Crea</string>
    <string name="createExcercise2">Crea</string>
    <string name="createExcercise3">Crea</string>
    <string name="logout">Esci</string>
    <string name="insert">Inserisci:</string>
    <string name="imageButton">Immagine</string>
    <string name="tipOne">Suggerimento 1:</string>
    <string name="tipTwo">Suggerimento 2:</string>
    <string name="tipThree">Suggerimento 3:</string>
    <string name="correctAnswer">Risposta Corretta:</string>
    <string name="pointForCorrectAnswer">Punteggio Risposta Esatta:</string>
    <string name="addExcercise1">Aggiungi</string>
    <string name="addExcercise2">Aggiungi</string>
    <string name="addExcercise3">Aggiungi</string>
    <string name="exTwoWordOne">Prima Parola:</string>
    <string name="exTwoWordTwo">Seconda Parola:</string>
    <string name="exTwoWordThree">Terza Parola:</string>
    <string name="register">Registra</string>
    <string name="addAppointment">Nuovo Appuntamento</string>
    <string name="parentNameText">Genitore</string>
    <string name="kidNameText">Bambino</string>
    <string name="cancel">Annulla</string>
    <string name="city">Città</string>
    <string name="address">Indirizzo</string>
    <string name="date">Data</string>
    <string name="time">Ora</string>
    <string name="Address">Indirizzo</string>
    <string name="City">Città</string>
    <string name="addExercise">Nuovo esercizio</string>
    <string name="descriptionImage">Data una immagine, il bambino deve riconoscere la parola associata all’immagine.</string>
    <string name="helpsForTherapist">Registra tre audio d\'aiuto per il bambino.</string>
    <string name="descriptionWordsInSequence">Dato un audio che riproduce 3 parole in sequenza, il bambino dovrà registrare un audio ripetendo le parole nella sequenza corretta.</string>
    <string name="descriptionMinimalPairs">Date due immagini e la riproduzione audio di una parola, il bambino deve riconoscere l’immagine giusta a cui la parola si riferisce.</string>
    <string name="chapter">Livello</string>
    <string name="defaultAccess">Accedi con account di default</string>
    <string name="settings">Impostazioni tema</string>
    <string name="settingsMenu">Impostazioni</string>
    <string name="excercisesViewer">Esercizi</string>
    <string name="patientsViewer">Pazienti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_title">Conferma logout</string>
    <string name="logoutQuestion">Sei sicuro di voler uscire?</string>
    <string name="yes">Sì</string>
    <string name="t1">Ember</string>
    <string name="t2">Edvige</string>
    <string name="t4">Nutmeg</string>
    <string name="t5">Bambi</string>
    <string name="t6">Munin</string>
    <string name="t7">Bruno</string>
    <string name="a1">Nagini</string>
    <string name="a2">BeepBeep</string>
    <string name="a3">Aragog</string>
    <string name="a4">Zephir</string>
    <string name="a5">Harum</string>
    <string name="p1">Rost</string>
    <string name="p2">Wally</string>
    <string name="p3">Splash</string>
    <string name="p4">Sigma</string>
    <string name="p5">Linux</string>
    <string name="p6">Sirius</string>
    <string name="p7">Flippy</string>
    <string name="imageDescriptionCharacters">Immagine del personaggio</string>
    <string name="InsertPassword">Inserisci password\nper continuare</string>
    <string name="defaultProfileAccess">Accedi automaticamente</string>
    <string name="exerciseDescription">Ascolta le 3 parole in sequenza e ripeti.</string>
    <string name="playButtonLabel">Ascolta</string>
    <string name="stopButtonLabel">Ferma</string>
    <string name="finishExercises">Fatto</string>
    <string name="exitQuestion">I dati salvati verranno eliminati, sei sicuro di voler uscire?</string>
    <string name="exit_title">Conferma uscita</string>
    <string name="record_audio">Registra audio</string>
    <string name="stop_audio">Fine registrazione</string>
    <string name="continueEs">Continua</string>
    <string name="audio_done">Audio salvato con successo. Se vuoi, puoi riascoltare la tua risposta!</string>
    <string name="exerciseDescription2">Ascolta l\'audio e seleziona la seguente immagine corretta.</string>
    <string name="exerciseDescription3">Pronuncia cosa vedi nell\'immagine. Hai a disposizione 3 aiuti!</string>
    <string name="permissionTitle">Richiesta permesso</string>
    <string name="permissionDescription">Per svolgere questo esercizio, abbiamo bisogno del tuo permesso per accedere al microfono del tuo dispositivo.</string>
    <string name="permissionDescriptionTherapist">Per creare questo esercizio, abbiamo bisogno del tuo permesso per accedere al microfono del tuo dispositivo.</string>
    <string name="permissionDescription3">Per rimanere sempre aggiornato attiva le notifiche di PronuntiApp!</string>
    <string name="continuePermission">Continua</string>
    <string name="permissionUploadThemeBackgroundDescription">Per personalizzare questo tema e caricare un nuovo sfondo, abbiamo bisogno del tuo permesso per accedere alla galleria del tuo dispositivo.</string>
    <string name="uploadAudioDescription">Carica il tuo audio</string>
    <string name="permissionDescription2">Per svolgere questo esercizio, abbiamo bisogno del tuo permesso per accedere ai tuoi file audio.</string>
    <string name="permissionDescription2Therapist">Per creare questo esercizio, abbiamo bisogno del tuo permesso per accedere ai tuoi file audio.</string>
    <string name="errorPermission">Cambia i permessi su Impostazioni del tuo dispositivo per svolgere questo esercizio.</string>
    <string name="errorPermissionTherapist">Cambia i permessi su Impostazioni del tuo dispositivo per creare questo esercizio.</string>
    <string name="infoPermission">In alternativa, puoi caricare un audio direttamente qui!</string>
    <string name="emptyEmail">Inserisci email</string>
    <string name="emptyPassword">Inserisci password</string>
    <string name="loginFail">Autenticazione fallita</string>
    <string name="wrongSection">Sezione errata per questo account</string>
    <string name="infoLockedExercise">Completa gli esercizi precedenti per sbloccare questo esercizio!</string>
    <string name="closePopupButton">Chiudi</string>
    <string name="infoWaitingForCorrection">Esercizio in attesa di correzione...</string>
    <string name="networErrorString">Non sei connesso a Internet. Verifica la tua connessione e riprova.</string>
    <string name="rewardsDescription">Abbiamo trovato un tesoro! Clicca per aprire e riscattare la ricompensa!</string>
    <string name="principalDeviceDescription">Desideri impostare questo dispositivo come principale? Riceverai tutte le notifiche su questo dispositivo.</string>
    <string name="principalDeviceTitle">Configurazione dispositivo principale</string>
    <string name="infoCoinCharacters">Monete richieste: </string>
    <string name="newCharacterDescription">Tocca e libera l\'animale rinchiuso!</string>
    <string name="newCharacterPopupTitle">Personaggio disponibile</string>
    <string name="newCharacterPopupDescription">Vuoi sbloccare questo personaggio?</string>
    <string name="newCharacterTitle">Hai sbloccato un nuovo personaggio!</string>
    <string name="weeklyGoals">Incarichi settimanali</string>
    <string name="confused_description">Sono ipnotizzato dalla tua bravura!</string>
    <string name="crown_description">Come un vero re, hai conquistato il tuo successo!</string>
    <string name="drums_description">Con ogni successo, aggiungi un nuovo battito al ritmo della tua crescita!</string>
    <string name="explorer_description">Bravo piccolo esploratore! Hai dimostrato che con impegno e dedizione si possono raggiungere grandi traguardi.</string>
    <string name="firefighter_description">Il tuo successo è come un fuoco ardente, impossibile da spegnere!</string>
    <string name="glasses_description">Vederti studiare è davvero fantastico!</string>
    <string name="hello_description">Un caloroso saluto al campione di oggi! Il tuo successo è meraviglioso!</string>
    <string name="hiding_description">La tua bravura mi manda tra le nuvole!</string>
    <string name="no_word_description">Il tuo successo è così grande che anche le parole non riescono a descriverlo!</string>
    <string name="love_description">La tua bravura è come un incantesimo che affascina e conquista tutti intorno a te!</string>
    <string name="party_description">Hai dimostrato di essere un vero leader. Continua a brillare! </string>
    <string name="singing_description">«Sii audace, piccolo guerrierooooooo!»</string>
    <string name="sleeping_description">Ho perso il conto dei tuoi successi… zzz…</string>
    <string name="surprised_description">Oh mio dio! Ce l\'hai fatta davvero?!</string>
    <string name="wink_description">Un occhiolino di successo! Continua a brillare e a sorridere, il mondo è tuo!</string>
    <string name="helpWindowDialogTitle">Aiuto #</string>
    <string name="helpWindowDialogMessage">Ascolta l\'audio d\'aiuto</string>
    <string name="TitleExerciseParent">Esercizi da correggere</string>
    <string name="profileTitle">Profilo</string>
    <string name="ImageDenomination">Denominazione immagini</string>
    <string name="MinimalPairsRecognition">Riconoscimento di coppie minime</string>
    <string name="WordsSequenceRepetition">Ripetizione di sequenze di parole</string>
    <string name="gallery">Galleria</string>
    <string name="camera">Fotocamera</string>
    <string name="chooseAnOption">Scegli un\'opzione</string>
    <string name="registerAudio">Registra l\'audio</string>
    <string name="uploadAudio">Carica l\'audio</string>
    <string name="appointmentDeleteTitle">Eliminazione appuntamento</string>
    <string name="appointmentDeleteDescription">Sei sicuro di voler eliminare questo appuntamento?</string>
</resources>