<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characters"
        android:icon="@drawable/sign_zoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:title="@string/titleCharacters" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:title="@string/titleHome" />

    <item
        android:id="@+id/ranking"
        android:icon="@drawable/ranking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:title="@string/titleRanking" />
</menu>
