<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_corner_gray"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseAnOption"
        android:textSize="@dimen/chooserTitleDimension"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageDenomination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTopBetweenButton"
        android:textSize="@dimen/chooserTextButtonDimension"
        app:cornerRadius="8dp"
        android:text="@string/ImageDenomination" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wordsSequencesRepetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="@dimen/marginTopBetweenButton"
        android:textSize="@dimen/chooserTextButtonDimension"
        app:cornerRadius="8dp"
        android:text="@string/WordsSequenceRepetition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minimalPairsRecognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="@dimen/marginTopBetweenButton"
        android:textSize="@dimen/chooserTextButtonDimension"
        app:cornerRadius="8dp"
        android:text="@string/MinimalPairsRecognition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_marginTop="@dimen/marginTopBetweenButton"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red"
        android:textSize="@dimen/chooserTextButtonDimension"
        android:text="@string/cancel" />

</LinearLayout>
