<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/closeButtonOrContinueButtonMarginTop"
        android:gravity="center"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/excerciseType"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_dimen" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/closeButtonOrContinueButtonMarginTop"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_text"
                        android:gravity="center"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/excerciseOne"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen_ranking" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_image"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/descriptionImage"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_text"
                        android:backgroundTint="@color/primary"
                        android:text="@string/createExcercise1"
                        android:textSize="@dimen/text_dimen" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/margin_image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_text"
                        android:gravity="center"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/excerciseTwo"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen_ranking" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_image"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/descriptionWordsInSequence"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/closeButtonOrContinueButtonMarginTop"
                        android:backgroundTint="@color/primary"
                        android:text="@string/createExcercise2"
                        android:textSize="@dimen/text_dimen" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/closeButtonOrContinueButtonMarginTop"
                        android:gravity="center"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/excerciseThree"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen_ranking" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_image"
                        android:fontFamily="@font/bubblegum_sans"
                        android:text="@string/descriptionMinimalPairs"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_dimen" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/closeButtonOrContinueButtonMarginTop"
                        android:backgroundTint="@color/primary"
                        android:text="@string/createExcercise3"
                        android:textSize="@dimen/text_dimen" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>