<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/logoutWindowPadding"
    android:background="@drawable/dialog_rounded_corner_gray">

    <TextView
        android:id="@+id/custom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/appointmentDeleteTitle"
        android:textSize="@dimen/popupTextDimension"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/logoutTextTitleMarginBottom"/>

    <TextView
        android:id="@+id/custom_message"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/appointmentDeleteDescription"
        android:textSize="@dimen/popupTextDimension"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/logoutQuestionMarginBottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:id="@+id/custom_positive_button"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:backgroundTint="@color/greenCompleted"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/closeButtonOrContinueButtonMarginTop"
            android:text="@string/yes"
            android:layout_marginEnd="@dimen/logoutButtonDimension"/>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:textColor="@color/white"
            android:id="@+id/custom_negative_button"
            android:layout_width="0dp"
            android:backgroundTint="@color/red"
            android:layout_height="wrap_content"
            android:textSize="@dimen/closeButtonOrContinueButtonMarginTop"
            android:layout_weight="1"
            android:text="No" />
    </LinearLayout>

</LinearLayout>
